Added header stuff. Organized things.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en-us">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="styles/primary.css">
-        
+        <link rel="stylesheet" href="styles/structure.css">
+        <link rel="stylesheet" href="styles/tone.css">
         <title>FBLA Website</title>
     </head>
     <body>
         <header>
-            
-            <h1>Business Name Here</h1>
+            <a href="index.html" class="home-link">
+                <img src="images/logo.png">
+                <h1>Brand Name Inc.</h1>
+            </a>
             <nav></nav>
         </header>
         <main>
