Fixed ugly link adress.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <a href="index.html" class="home-link">
+            <a href="../" class="home-link">
                 <img src="images/logo.png">
                 <h1>Brand Name Inc.</h1>
             </a>
