Co-authored-by: Springville-HighSchool <Springville-HighSchool@users.noreply.github.com> Co-authored-by: ZombiePelican007 <ZombiePelican007@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles/structure.css">
         <link rel="stylesheet" href="styles/tone.css">
-        <title>FBLA Website</title>
+        <title>Polaris Epsilon</title>
     </head>
     <body>
         <header>
             <a href="" class="home-link">
                 <img src="images/logo.png">
-                <h1>Brand Name Inc.</h1>
+                <h1>Polaris Epsilon</h1>
+                <h3>Astronomy tours</h3>
             </a>
             <nav></nav>
         </header>
