--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         <header>
             <a href="" class="home-link">
                 <img src="images/logo.png">
-                <h1>Polaris Epsilon</h1>
-                <h3>Astronomy tours</h3>
+                <div class="title-box">
+                    <h1>Polaris Epsilon</h1>
+                    <h3>Astronomy tours</h3>
+                </div>
             </a>
             <nav></nav>
         </header>
@@ -20,7 +22,7 @@
 
         </main>
         <footer>
-            Footer stuff
+            Footer stuff////
         </footer>
     </body>
 </html>
