--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <img src="images/logo.png">
                 <div class="title-box">
                     <h1>Polaris Epsilon</h1>
-                    <h2>Astronomy tours</h2>
+                    <h2>Astronomy Tours</h2>
                 </div>
             </a>
             <nav></nav>
