--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     </head>
     <body>
         <header>
+            <video>
+                <source src="">
+                <source src="">
+            </video>
         </header>
         <main>
             hey
