--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles/dropdown">
         <link rel="stylesheet" href="styles/structure.css">
         <link rel="stylesheet" href="styles/tone.css">
         <title>Polaris Epsilon</title>
@@ -10,7 +11,30 @@
         <header>
 
         </header>
-        <nav></nav>
+        <nav>
+            <!--start of navbar-->
+            <div class="navbar">
+              <div class="links">
+                <div class="navspace"><a href="index.html">Home</a></div>
+                <div class="navspace"><a href="imagePage.html">Student posts</a></div>
+                <div class="navspace"><a href="events.html">Events</a></div>
+                <div class="navspace"><a href="Instagram.html">Instagram</a></div>
+                <div class="navspace"><a href="clubs.html">Clubs</a></div>
+                <div class="navspace">
+                  <div class="dropdown">
+                    <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
+                    <div class="dropdown-content">
+                      <a href="index.html">Home</a>
+                      <a href="imagePage.html">Student posts</a>
+                      <a href="events.html">Events</a>
+                      <a href="instagram.html">Instagram</a>
+                      <a href="clubs.html">Clubs</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--end of navbar--></nav>
         <main>
             hey
 
