--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <link rel="stylesheet" href="styles/dropdown">
         <link rel="stylesheet" href="styles/structure.css">
         <link rel="stylesheet" href="styles/tone.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/7ce960fd0f.js" crossorigin="anonymous"></script>
+        <!--thanks font awesome for these beautiful icons-->
         <title>Polaris Epsilon</title>
     </head>
     <body>
@@ -19,7 +24,6 @@
                 <div class="navspace"><a href="imagePage.html">Student posts</a></div>
                 <div class="navspace"><a href="events.html">Events</a></div>
                 <div class="navspace"><a href="Instagram.html">Instagram</a></div>
-                <div class="navspace"><a href="clubs.html">Clubs</a></div>
                 <div class="navspace">
                   <div class="dropdown">
                     <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
