--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="styles/dropdown">
+        <link rel="stylesheet" href="styles/dropdown.css">
         <link rel="stylesheet" href="styles/structure.css">
         <link rel="stylesheet" href="styles/tone.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
