Added video element, styled it somewhat

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </head>
     <body>
         <header>
-
+          <video class="intro">
+            <source src="" type="video/mp4">
+          </video>
         </header>
         <nav>
             <!--start of navbar-->
