Implemented intro video

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </head>
     <body>
         <header>
-          <video class="intro">
-            <source src="" type="video/mp4">
+          <video class="intro" autoplay muted loop>
+            <source src="video/rickroll.mp4" type="video/mp4;">
           </video>
         </header>
         <nav>
