added logo and fixed issues with logo

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <!--start of navbar-->
             <div class="navbar">
               <div class="links">
+                <div class="navspace"><a href="index.html" class="img"><img src="images/logo.jpg" alt="Logo" width="70px"></a></div>
                 <div class="navspace"><a href="index.html">Home</a></div>
                 <div class="navspace"><a href="imagePage.html">Student posts</a></div>
                 <div class="navspace"><a href="events.html">Events</a></div>
