--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
     </head>
     <body>
         <header>
-          <video class="intro" autoplay muted loop>
-            <source src="video/rickroll.mp4" type="video/mp4;">
-          </video>
+          <div class="header-content-wrapper">
+            <video class="intro" autoplay muted loop>
+              <source src="video/rickroll.mp4" type="video/mp4;">
+            </video>
+          </div>
+          <div class="header-content-wrapper">
+            
+            <h1>Polaris Epsilon</h1>
+            <h2>Astronomy tours</h2>
+          </div>
         </header>
         <nav>
             <!--start of navbar-->
