--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <title>Polaris Epsilon</title>
     </head>
     <body>
-        <header>
-          <video class="intro" autoplay muted controls>
-            <source src="video/background.mp4" type="video/mp4">
-          </video>
+        <div class="header">
+            <video class="intro" autoplay muted controls>
+            <source src="video/background_Trim.mp4" type="video/mp4">
+            </video>
           <script>
             var myVideo = document.getElementById("theme");
       
@@ -27,7 +27,7 @@
                 myVideo.pause();
             }
           </script>
-        </header>
+        </div>
         <nav>
             <!--start of navbar-->
             <div class="navbar">
