Added "cool" animation, removed Mr. Astley

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <header>
           <div class="header-content-wrapper">
             <video class="intro" autoplay muted loop>
-              <source src="video/rickroll.mp4" type="video/mp4;">
+              <source src="video/header.mp4" type="video/mp4;">
             </video>
           </div>
           <div class="header-content-wrapper">
             
             <h1>Polaris Epsilon</h1>
-            <h2>Astronomy tours</h2>
+            <h2>Astronomy Tours</h2>
           </div>
         </header>
         <nav>
