--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       
         <header>
           <div class="header-content-wrapper" id="video-intro-wrapper">
-            <video id="intro-video" autoplay muted loop>
+            <video id="intro-video" autoplay muted loop playsinline>
               <source src="video/header.mp4" type="video/mp4;">
             </video>
             
