Goofed around with the navbar

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <div class="navbar">
               <div class="links">
                 <div class="navspace"><a href="index.html" class="img"><img src="images/logo.jpg" alt="Logo" width="70px"></a></div>
-                <div class="navspace"><a href="index.html">Home</a></div>
-                <div class="navspace"><a href="imagePage.html">Student posts</a></div>
-                <div class="navspace"><a href="events.html">Events</a></div>
-                <div class="navspace"><a href="Instagram.html">Instagram</a></div>
+                <div class="navspace"><a href="index.html"><span>Home</span></a></div>
+                <div class="navspace"><a href="imagePage.html"><span>Student posts</a></span></div>
+                <div class="navspace"><a href="events.html"><span>Events</a></span></div>
+                <div class="navspace"><a href="Instagram.html"><span>Instagram</a></span></div>
                 <div class="navspace">
                   <div class="dropdown">
                     <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
@@ -76,10 +76,10 @@
                 </div>
               </div>
             </div>
-            <!--end of navbar--></nav>
+            <!--end of navbar-->
+        </nav>
         <main>
-            hey
-
+          
         </main>
         <footer>
             Footer stuff////
