Made dropdown mobile-friendly

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <nav>
           <div class="content">
             <a href="index.html" class="img item"><img src="images/logo.jpg" alt="Logo" width="70px"></a>
-            <div class="group primary">
-              <div class="grouplabel">Explore<i class="fas fa-chevron-down"></i></div>
+            <div class="navgroup primary">
+              <div class="grouplabel" tabindex="0">Explore<i class="fas fa-chevron-down"></i></div>
               <div class="groupcontent">
                 <div class="item"><a href="index.html">Home</a></div>
                 <div class="item"><a href="imagePage.html">Student posts</a></div>
@@ -65,31 +65,7 @@
                 <div class="item"><a href="Instagram.html">Instagram</a></div>
               </div>
             </div>
-            
           </div>
-          <!--
-          <div class="navbar">
-            <div class="links">
-              <div class="navspace"><a href="index.html" class="img"><img src="images/logo.jpg" alt="Logo" width="70px"></a></div>
-              <div class="navspace"><a href="index.html"><span>Home</span></a></div>
-              <div class="navspace"><a href="imagePage.html"><span>Student posts</a></span></div>
-              <div class="navspace"><a href="events.html"><span>Events</a></span></div>
-              <div class="navspace"><a href="Instagram.html"><span>Instagram</a></span></div>
-              <div class="navspace">
-                <div class="dropdown">
-                  <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
-                  <div class="dropdown-content">
-                    <a href="index.html">Home</a>
-                    <a href="imagePage.html">Student posts</a>
-                    <a href="events.html">Events</a>
-                    <a href="instagram.html">Instagram</a>
-                    <a href="clubs.html">Clubs</a>
-                  </div>
-                </div>
-              </div>
-            </div> -->
-          </div>
-            <!--end of navbar-->
         </nav>
         <main>
 
