Added some footer stuff

--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
 
         </main>
         <footer>
-            Footer stuff////
+            <div class="content">
+              <div>
+                <em>Disclaimer</em><br>
+                This site was created for educational purposes. This is not a real company and you cannot purchase any services suggested here.
+              </div>
+            </div>
         </footer>
     </body>
 </html>
