--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="styles/dropdown.css">
         <link rel="stylesheet" href="styles/structure.css">
         <link rel="stylesheet" href="styles/tone.css">
+        <link rel="stylesheet" href="styles/content.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
@@ -68,7 +69,12 @@
           </div>
         </nav>
         <main>
-
+          <div class="contentcard focus">
+            <h2>Your guide to the night sky</h2>
+            <p>
+              Polaris Epsilon offers the ultimate stargazing experience.
+            </p>
+          </div>
         </main>
         <footer>
             <div class="content">
