--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h2>Your guide to the night sky</h2>
             <p>
               Polaris Epsilon offers the ultimate stargazing experience.
-              From guided constalation journeys to tbd.
+              From guided constalation adventures to tbd.
             </p>
           </div>
         </main>
