Added more content

--- a/index.html
+++ b/index.html
@@ -61,9 +61,6 @@
               <div class="grouplabel" tabindex="0">Explore<i class="fas fa-chevron-down"></i></div>
               <div class="groupcontent">
                 <div class="item"><a href="index.html">Home</a></div>
-                <div class="item"><a href="imagePage.html">Student posts</a></div>
-                <div class="item"><a href="events.html">Events</a></div>
-                <div class="item"><a href="Instagram.html">Instagram</a></div>
               </div>
             </div>
           </div>
@@ -72,8 +69,42 @@
           <div class="contentcard focus">
             <h2>Your guide to the night sky</h2>
             <p>
-              Polaris Epsilon offers the ultimate stargazing experience.
-              From guided constalation adventures to tbd.
+              Polaris Epsilon offers the ultimate stargazing experience. <br>
+              Our services span from guided constelation adventures to tbd.
+            </p>
+          </div>
+          <div class="splitcontainer">
+            <div class="contentcard focus">
+              <h2>Astronomy as a science</h2>
+              <p>
+                Want to learn about the details of astronomy?<br>
+                We have you covered.
+              </p>
+              <p>
+                We teach weekly non-formal classes for adults and kids.
+              </p>
+            </div>
+            <div>
+              <div class="contentcard">
+                <h3>Classes include:</h3>
+                <ul>
+                  <li>Introduction to Astronomy</li>
+                  <li>Telescope Operation and Maintainance</li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="contentcard">
+            <h2>Why learn astronomy?</h2>
+            <p>
+              Hey, there are no stupid questions.
+            </p>
+            <p>
+              A common reason is that by observing the very large and far away things, we can learn more about the small things all around us.
+            </p>
+            <p>
+              To us though, the best part of astronomy is the feeling that perhaps those are not so far away after all.
             </p>
           </div>
         </main>
