Added classes page

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               <div class="grouplabel" tabindex="0">Explore<i class="fas fa-chevron-down"></i></div>
               <div class="groupcontent">
                 <div class="item"><a href="index.html">Home</a></div>
+                <div class="item"><a href="classes.html">Classes</a></div>
               </div>
             </div>
           </div>
@@ -69,35 +70,34 @@
           <div class="contentcard focus">
             <h2>Your guide to the night sky</h2>
             <p>
-              Polaris Epsilon offers the ultimate stargazing experience. <br>
-              Our services span from guided constelation adventures to tbd.
+              Polaris Epsilon offers the ultimate stargazing experience.<br>
+              Our services span from event demonstrations to astronomy classes.
             </p>
           </div>
           <div class="splitcontainer">
             <div class="contentcard focus">
-              <h2>Astronomy as a science</h2>
+              <h2>Astronomy Classes</h2>
               <p>
-                Want to learn about the details of astronomy?<br>
-                We have you covered.
+                We offer weekly hands-on classes for kids ages 6-12.
               </p>
               <p>
-                We teach weekly non-formal classes for adults and kids.
+                These classes are a fun way for kids to get a introductory experience with astronomy and engineering.
               </p>
             </div>
             <div class="contentcard">
-              <h3>Classes include:</h3>
+              <h3>Classes:</h3>
               <ul>
-                <li>Introduction to Astronomy</li>
-                <li>Telescope Operation and Maintainance</li>
-
+                <li>Stars and Planets</li>
+                <li>Stellar Lifecycles</li>
+                <li>Telescope Operation</li>
+                <li>Aerospace Design</li>
+                <li>Aerospace Design 2</li>
               </ul>
+              <a href="classes.html">More info</a>
             </div>
           </div>
           <div class="contentcard">
             <h2>Why learn astronomy?</h2>
-            <p>
-              Hey, there are no stupid questions.
-            </p>
             <p>
               A common reason is that by observing the very large and far away things, we can learn more about the small things all around us.
             </p>
@@ -107,12 +107,15 @@
           </div>
         </main>
         <footer>
-            <div class="content">
-              <div>
-                <em>Disclaimer</em><br>
-                This site was created for educational purposes. This is not a real company and you cannot purchase any services suggested here.
-              </div>
+          <div class="content">
+            <div>
+              &copy;2021 Easton Swenson and Isaac Lewis
             </div>
+            <div>
+              <em>Disclaimer</em><br>
+              This site was created for educational purposes. This is not a real company and you cannot purchase any services suggested here.
+            </div>
+          </div>
         </footer>
     </body>
 </html>
