--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
               <div class="grouplabel" tabindex="0">Explore<i class="fas fa-chevron-down"></i></div>
               <div class="groupcontent">
                 <div class="item"><a href="index.html">Home</a></div>
+                <div class="item"><a href="events.html">Events</a></div>
                 <div class="item"><a href="classes.html">Classes</a></div>
+                <div class="item"><a href="classes.html">Contact Us</a></div>
               </div>
             </div>
           </div>
