Added more table stuff

--- a/classes.html
+++ b/classes.html
@@ -46,24 +46,52 @@
                 <table>
                     <thead><h3>Class Information</h3></thead>
                     <tbody>
-                        <tr>
-                            <th>Class</th>
-                            <th>Age Group</th>
-                            <th>Times</th>
-                            <th>Summary</th>
-                        </tr>
-                        <tr>
-                            <td>Stars and Planets</td>
-                            <td>Ages 7 to 9</td>
-                            <td>Mondays 4:00 to 5:00</td>
-                            <td>Students learn about the basics of astronomy, including the solar system, constellations, asteroids, and comets.</td>
-                        </tr>
-                        <tr>
-                            <td>Stellar Lifecycles</td>
-                            <td>Ages 10 to 12</td>
-                            <td>Tuesdays 4:00 to 5:00</td>
-                            <td>Stellar Lifecycles discusses stars, white dwarfs, neutron stars, and much more.</td>
-                        </tr>
+                      <tr>
+                          <th>Class</th>
+                          <th>Age Group</th>
+                          <th colspan="3">Times Offered</th>
+                          <th>Summary</th>
+                      </tr>
+                      <tr>
+                          <td>Stars and Planets</td>
+                          <td>Ages 7 to 9</td>
+                          <td>Mondays from 4:00 to 5:00 PM</td>
+                          <td>Wednesdays from 4:00 to 5:00 PM</td>
+                          <td>Fridays from 7:00 to 8:00 PM</td>
+                          <td>Students learn about the basics of astronomy, including the solar system, constellations, asteroids, and comets.</td>
+                      </tr>
+                      <tr>
+                          <td>Stellar Lifecycles</td>
+                          <td>Ages 10 to 12</td>
+                          <td>Tuesdays from 4:00 to 5:00 PM</td>
+                          <td>Thursdays from 4:00 to 5:00 PM</td>
+                          <td></td>
+                          <td>Stellar Lifecycles discusses stars, white dwarfs, neutron stars, and much more.</td>
+                      </tr>
+                      <tr>
+                        <td>Telescope Operation</td>
+                        <td>Ages 10 to 12</td>
+                        <td>Fridays from 9:00 to 10:00 PM</td>
+                        <td>Saturdays from 9:00 to 10:00 PM</td>
+                        <td></td>
+                        <td>Students learn how to operate a telescope, and how to find objects in the sky.</td>
+                      </tr>
+                      <tr>
+                        <td>Aerospace Design</td>
+                        <td>Ages 8 to 10</td>
+                        <td>Fridays from 4:00 to 5:00 PM</td>
+                        <td>Saturdays from 4:00 to 5:00 PM</td>
+                        <td>Saturdays from 2:00 to 3:00 PM</td>
+                        <td>We make paper airplanes, model parachutes, and other fun contraptions to illustrate aerodynamics!</td>
+                      </tr>
+                      <tr>
+                        <td>Aerospace Design 2</td>
+                        <td>Ages 10 to 12</td>
+                        <td>Fridays from 5:00 to 6:00 PM</td>
+                        <td>Saturdays from 3:00 to 4:00 PM</td>
+                        <td></td>
+                        <td>We create and launch air-propelled model rockets while learning and applying aerodynamics concepts.</td>
+                      </tr>
                     </tbody>
                 </table>
             </div>
