Added an image (yay)

--- a/index.html
+++ b/index.html
@@ -69,12 +69,17 @@
           </div>
         </nav>
         <main>
-          <div class="contentcard focus">
-            <h2>Your guide to the night sky</h2>
-            <p>
-              Polaris Epsilon offers the ultimate stargazing experience.<br>
-              Our services span from event demonstrations to astronomy classes.
-            </p>
+          <div class="splitcontainer">
+            <div class="contentcard focus">
+              <h2>Your guide to the night sky</h2>
+              <p>
+                Polaris Epsilon offers the ultimate stargazing experience.<br>
+                Our services span from event demonstrations to astronomy classes.
+              </p>
+            </div>
+            <div class="contentcard image">
+              <img src="images/telescope1.jpg" width="200px">
+            </div>
           </div>
           <div class="splitcontainer">
             <div class="contentcard focus">
