--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
                 Our services span from event demonstrations to astronomy classes.
               </p>
             </div>
-            <div class="contentcard image">
+            <div class="contentcard image optional">
               <img src="images/telescope1.jpg" width="200px">
+              <div class="caption" width="200px">&copy;2018 Gregory Hayes</div>
             </div>
           </div>
           <div class="splitcontainer">
@@ -118,13 +119,14 @@
         <footer>
           <div class="content">
             <div>
-              &copy;2021 Easton Swenson and Isaac Lewis
-            </div>
-            <div>
               <em>Disclaimer</em><br>
               This site was created for educational purposes. This is not a real company and you cannot purchase any services suggested here.
             </div>
+            <div class="copyright">
+              &copy;2021 Easton Swenson and Isaac Lewis. All rights reserved.
+            </div>
           </div>
+          
         </footer>
     </body>
 </html>
