Made intro video preload

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header>
           <div class="header-content-wrapper" id="video-intro-wrapper">
             <video id="intro-video" autoplay muted loop playsinline>
-              <source src="video/header.mp4" type="video/mp4;">
+              <source src="video/header.mp4" type="video/mp4;" preload="auto">
             </video>
             
             <script>
