--- a/classes.html
+++ b/classes.html
@@ -71,8 +71,8 @@
                       <tr>
                         <td>Telescope Operation</td>
                         <td>Ages 10 to 12</td>
-                        <td>Fridays from 9:00 to 10:00 PM</td>
-                        <td>Saturdays from 9:00 to 10:00 PM</td>
+                        <td>Fridays from 8:30 to 9:30 PM</td>
+                        <td>Saturdays from 8:30 to 9:30 PM</td>
                         <td></td>
                         <td>Students learn how to operate a telescope, and how to find objects in the sky.</td>
                       </tr>
@@ -96,10 +96,12 @@
                 </table>
             </div>
             <div class="contentcard" id="sessions">
-                <h3>Session Information</h3>
+                <h3>Schedule Information</h3>
                 <p>
                     Classes are grouped into 8 week sessions.
+                    Further session information can be found in the calendar below.
                 </p>
+                <iframe class="calendar" src="https://calendar.google.com/calendar/embed?src=a7r0pgibe5k7sd7i75ick44bmo%40group.calendar.google.com&ctz=America%2FDenver" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             </div>
         </main>
         <footer>
