Improved styles (hopefully)

--- a/classes.html
+++ b/classes.html
@@ -101,7 +101,7 @@
                     Classes are grouped into 8 week sessions.
                     Further session information can be found in the calendar below.
                 </p>
-                <iframe class="calendar" src="https://calendar.google.com/calendar/embed?src=a7r0pgibe5k7sd7i75ick44bmo%40group.calendar.google.com&ctz=America%2FDenver" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                <iframe class="calendar" src="https://calendar.google.com/calendar/embed?src=a7r0pgibe5k7sd7i75ick44bmo%40group.calendar.google.com&ctz=America%2FDenver" frameborder="0" scrolling="no"></iframe>
             </div>
         </main>
         <footer>
