--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="item"><a href="index.html">Home</a></div>
                 <div class="item"><a href="events.html">Events</a></div>
                 <div class="item"><a href="classes.html">Classes</a></div>
-                <div class="item"><a href="classes.html">Contact Us</a></div>
+                <div class="item"><a href="contact.html">Contact Us</a></div>
               </div>
             </div>
           </div>
@@ -106,14 +106,23 @@
               </p>
             </div>
           </div>
-          <div class="contentcard">
-            <h2>Why learn astronomy?</h2>
-            <p>
-              A common reason is that by observing the very large and far away things, we can learn more about the small things all around us.
-            </p>
-            <p>
-              To us though, the best part of astronomy is the feeling that perhaps those are not so far away after all.
-            </p>
+          
+          <div class="splitcontainer">
+            <div class="contentcard image optional">
+              <img src="images/nebula.jpg" width="350px">
+              <div class="caption">
+                Photo by <a href="https://unsplash.com/@nasa?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">NASA</a> on <a href="https://unsplash.com/s/photos/night-sky?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+              </div>
+            </div>
+            <div class="contentcard">
+              <h2>Why learn astronomy?</h2>
+              <p>
+                A common reason is that by observing the very large and far away things, we can learn more about the small things all around us.
+              </p>
+              <p>
+                To us though, the best part of astronomy is the feeling that perhaps those are not so far away after all.
+              </p>
+            </div>
           </div>
         </main>
         <footer>
