--- a/documentation.html
+++ b/documentation.html
@@ -4,6 +4,26 @@
 
     </head>
     <body>
-        <h1>Polaris Epsilon</h1>
+        <h1>Site: Polaris Epsilon</h1>
+        <h2>Product: Astronomy tours, classes</h2>
+        <p>Sites:</p>
+        <ul>
+            <li>index.html</li>
+            <li>events.html</li>
+            <li>classes.html</li>
+            <li>contact.html</li>
+        </ul>
+        <p>Tasks:</p>
+        <ul>
+            <li>Home page intro</li>
+            <li>Navigation</li>
+            <li>Page structure</li>
+            <li>Footer information</li>
+            <li>Main page content</li>
+            <li>Classes page content</li>
+            <li>Events page content</li>
+            <li>Contact page contact</li>
+        </ul>
+            
     </body>
 </html>
