--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <li>Aerospace Design 2</li>
           </ul>
           <p>
-            <a href="classes.html">More info</a>
+            <a href="classes.html" class="button">More info</a>
           </p>
         </div>
       </div>
