--- a/classes.html
+++ b/classes.html
@@ -1,119 +1,119 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-        <link rel="stylesheet" href="styles/dropdown.css">
-        <link rel="stylesheet" href="styles/structure.css">
-        <link rel="stylesheet" href="styles/tone.css">
-        <link rel="stylesheet" href="styles/content.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/7ce960fd0f.js" crossorigin="anonymous"></script>
-        <!--thanks font awesome for these beautiful icons-->
-        <title>Polaris Epsilon</title>
-
-        
-
-    </head>
-    <body>
-        <nav>
-            <div class="content">
-              <a href="index.html" class="img item"><img src="images/logo.jpg" alt="Logo" width="70px"></a>
-              <div class="navgroup primary">
-                <div class="grouplabel" tabindex="0">Explore<i class="fas fa-chevron-down"></i></div>
-                <div class="groupcontent">
-                  <div class="item"><a href="index.html">Home</a></div>
-                  <div class="item"><a href="events.html">Events</a></div>
-                  <div class="item"><a href="classes.html">Classes</a></div>
-                  <div class="item"><a href="classes.html">Contact Us</a></div>
-                </div>
-              </div>
-            </div>
-          </nav>
-        <main>
-            <div class="contentcard focus">
-                <h2>Classes</h2>
-                <p>
-                    We offer various classes for kids ages 7-14. Classes last 8 weeks; see <a href="#sessions">session dates</a> below.
-                </p>
-                <p>
-                    Each class is offered on multiple days so you can decide which day works best for your schedule.
-                </p>
-            </div>
-            <div class="contentcard">
-                <table>
-                  <thead><h3>Class Information</h3></thead>
-                  <tbody>
-                    <tr>
-                        <th>Class</th>
-                        <th>Age Group</th>
-                        <th colspan="3">Times Offered</th>
-                        <th>Summary</th>
-                    </tr>
-                    <tr>
-                        <td>Stars and Planets</td>
-                        <td>Ages 7 to 9</td>
-                        <td>Mondays from 4:00 to 5:00 PM</td>
-                        <td>Wednesdays from 4:00 to 5:00 PM</td>
-                        <td>Fridays from 7:00 to 8:00 PM</td>
-                        <td>Students learn about the basics of astronomy, including the solar system, constellations, asteroids, and comets.</td>
-                    </tr>
-                    <tr>
-                        <td>Stellar Lifecycles</td>
-                        <td>Ages 10 to 12</td>
-                        <td>Tuesdays from 4:00 to 5:00 PM</td>
-                        <td>Thursdays from 4:00 to 5:00 PM</td>
-                        <td></td>
-                        <td>Stellar Lifecycles discusses stars, white dwarfs, neutron stars, and much more.</td>
-                    </tr>
-                    <tr>
-                      <td>Telescope Operation</td>
-                      <td>Ages 10 to 12</td>
-                      <td>Fridays from 8:30 to 9:30 PM</td>
-                      <td>Saturdays from 8:30 to 9:30 PM</td>
-                      <td></td>
-                      <td>Students learn how to operate a telescope, and how to find objects in the sky.</td>
-                    </tr>
-                    <tr>
-                      <td>Aerospace Design</td>
-                      <td>Ages 8 to 10</td>
-                      <td>Fridays from 4:00 to 5:00 PM</td>
-                      <td>Saturdays from 4:00 to 5:00 PM</td>
-                      <td>Saturdays from 2:00 to 3:00 PM</td>
-                      <td>We make paper airplanes, model parachutes, and other fun contraptions to illustrate aerodynamics!</td>
-                    </tr>
-                    <tr>
-                      <td>Aerospace Design 2</td>
-                      <td>Ages 10 to 12</td>
-                      <td>Fridays from 5:00 to 6:00 PM</td>
-                      <td>Saturdays from 3:00 to 4:00 PM</td>
-                      <td></td>
-                      <td>We create and launch air-propelled model rockets while learning and applying aerodynamics concepts.</td>
-                    </tr>
-                  </tbody>
-              </table>
-            </div>
-            <div class="contentcard" id="sessions">
-                <h3>Schedule Information</h3>
-                <p>
-                    Classes are grouped into 8 week sessions.
-                    Further session information can be found in the calendar below.
-                </p>
-                <iframe class="calendar" src="https://calendar.google.com/calendar/embed?src=a7r0pgibe5k7sd7i75ick44bmo%40group.calendar.google.com&ctz=America%2FDenver" frameborder="0" scrolling="no"></iframe>
-            </div>
-        </main>
-        <footer>
-          <div class="content">
-            <div>
-              &copy;2021 Easton Swenson and Isaac Lewis
-            </div>
-            <div>
-              <em>Disclaimer</em><br>
-              This site was created for educational purposes. This is not a real company and you cannot purchase any services suggested here.
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+    <link rel="stylesheet" href="styles/dropdown.css">
+    <link rel="stylesheet" href="styles/structure.css">
+    <link rel="stylesheet" href="styles/tone.css">
+    <link rel="stylesheet" href="styles/content.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/7ce960fd0f.js" crossorigin="anonymous"></script>
+    <!--thanks font awesome for these beautiful icons-->
+    <title>Polaris Epsilon</title>
+  </head>
+  <body>
+      <nav>
+        <div class="content">
+          <a href="index.html" class="img item"><img src="images/logo.jpg" alt="Logo" width="70px"></a>
+          <div class="navgroup primary">
+            <div class="grouplabel" tabindex="0">Explore<i class="fas fa-chevron-down"></i></div>
+            <div class="groupcontent">
+              <div class="item"><a href="index.html">Home</a></div>
+              <div class="item"><a href="events.html">Events</a></div>
+              <div class="item"><a href="classes.html">Classes</a></div>
+              <div class="item"><a href="classes.html">Contact Us</a></div>
             </div>
           </div>
-        </footer>
-    </body>
+        </div>
+      </nav>
+      <main>
+        <div class="contentcard focus">
+            <h2>Classes</h2>
+            <p>
+                We offer various classes for kids ages 7-14. Classes last 8 weeks; see <a href="#sessions">session dates</a> below.
+            </p>
+            <p>
+                Each class is offered on multiple days so you can decide which day works best for your schedule.
+            </p>
+        </div>
+        <div class="contentcard">
+            <table>
+              <thead><h3>Class Information</h3></thead>
+              <tbody>
+                <tr>
+                  <th>Class</th>
+                  <th>Age Group</th>
+                  <th colspan="3">Times Offered</th>
+                  <th>Summary</th>
+                </tr>
+                <tr>
+                  <td>Stars and Planets</td>
+                  <td>Ages 7 to 9</td>
+                  <td>Mondays from 4:00 to 5:00 PM</td>
+                  <td>Wednesdays from 4:00 to 5:00 PM</td>
+                  <td>Fridays from 7:00 to 8:00 PM</td>
+                  <td>Students learn about the basics of astronomy, including the solar system, constellations, asteroids, and comets.</td>
+                </tr>
+                <tr>
+                  <td>Stellar Lifecycles</td>
+                  <td>Ages 10 to 12</td>
+                  <td>Tuesdays from 4:00 to 5:00 PM</td>
+                  <td>Thursdays from 4:00 to 5:00 PM</td>
+                  <td></td>
+                  <td>Stellar Lifecycles discusses stars, white dwarfs, neutron stars, and much more.</td>
+                </tr>
+                <tr>
+                  <td>Telescope Operation</td>
+                  <td>Ages 10 to 12</td>
+                  <td>Fridays from 8:30 to 9:30 PM</td>
+                  <td>Saturdays from 8:30 to 9:30 PM</td>
+                  <td></td>
+                  <td>Students learn how to operate a telescope, and how to find objects in the sky.</td>
+                </tr>
+                <tr>
+                  <td>Aerospace Design</td>
+                  <td>Ages 8 to 10</td>
+                  <td>Fridays from 4:00 to 5:00 PM</td>
+                  <td>Saturdays from 4:00 to 5:00 PM</td>
+                  <td>Saturdays from 2:00 to 3:00 PM</td>
+                  <td>We make paper airplanes, model parachutes, and other fun contraptions to illustrate aerodynamics!</td>
+                </tr>
+                <tr>
+                  <td>Aerospace Design 2</td>
+                  <td>Ages 10 to 12</td>
+                  <td>Fridays from 5:00 to 6:00 PM</td>
+                  <td>Saturdays from 3:00 to 4:00 PM</td>
+                  <td></td>
+                  <td>We create and launch air-propelled model rockets while learning and applying aerodynamics concepts.</td>
+                </tr>
+              </tbody>
+          </table>
+        </div>
+        <div class="contentcard" id="sessions">
+          <h3>Schedule Information</h3>
+          <p>
+            Classes are grouped into 8 week sessions.
+            Further session information can be found in the calendar below.
+          </p>
+          <iframe class="calendar" src="https://calendar.google.com/calendar/embed?src=a7r0pgibe5k7sd7i75ick44bmo%40group.calendar.google.com&ctz=America%2FDenver" frameborder="0" scrolling="no"></iframe>
+          <a class="button" target="_blank" href="https://calendar.google.com/calendar/u/1?cid=YTdyMHBnaWJlNWs3c2Q3aTc1aWNrNDRibW9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">
+            Open with Google Calendar
+          </a>
+        </div>
+      </main>
+      <footer>
+        <div class="content">
+          <div>
+            &copy;2021 Easton Swenson and Isaac Lewis
+          </div>
+          <div>
+            <em>Disclaimer</em><br>
+            This site was created for educational purposes. This is not a real company and you cannot purchase any services suggested here.
+          </div>
+        </div>
+      </footer>
+  </body>
 </html>
