--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="content">
         <div>
           <em>Disclaimer</em><br>
-          This site was created for educational purposes. This is not a real company and you cannot purchase any services suggested here.
+          This website was created for educational purposes. Any services offered by this website, whether stated or implied, cannot be purchased here.
         </div>
         <div class="copyright">
           &copy;2021 Easton Swenson and Isaac Lewis. All rights reserved.
