--- a/classes.html
+++ b/classes.html
@@ -24,7 +24,7 @@
               <div class="item"><a href="index.html">Home</a></div>
               <div class="item"><a href="events.html">Events</a></div>
               <div class="item"><a href="classes.html">Classes</a></div>
-              <div class="item"><a href="classes.html">Contact Us</a></div>
+              <div class="item"><a href="contact.html">Contact Us</a></div>
             </div>
           </div>
         </div>
