Iconing and such

--- a/events.html
+++ b/events.html
@@ -32,17 +32,28 @@
 
     <main>
       <div class="contentcard focus">
-        <h2>Contact Us</h2>
+        <h2>Events</h2>
         <p>
-          Email: <a href="mailto:polarisepsilonastro@gmail.com">polarisepsilonastro@gmail.com</a>
-          
+          Bring us to your event!
         </p>
         <p>
-          Phone: <a href="tel:+11234567890">123-456-7890</a>
+          To make a reservation, call <a href="tel:+11234567890">123-456-7890</a>.
         </p>
-        <p>
-          We look forward to hearing from you!
-        </p>
+      </div>
+      <div class="splitcontainer">
+        <div class="contentcard">
+          <h2>Astronomy Tours</h2>
+          <p>
+            Have an expert come to your event for a very engaging and interactive experience.
+          </p>
+        </div>
+        <div class="contentcard">
+          <h2>Telescopes</h2>
+          <p>
+            Rent a telescope for a night!
+          </p>
+        </div>
+        
       </div>
     </main>
     <footer>
