--- a/classes.html
+++ b/classes.html
@@ -17,7 +17,7 @@
   <body>
       <nav>
         <div class="content">
-          <a href="index.html" class="img item"><img src="images/logo.jpg" alt="Logo" width="70px"></a>
+          <a href="index.html" class="img item"><img src="images/logo.png" alt="Logo" width="64px"></a>
           <div class="navgroup primary">
             <div class="grouplabel" tabindex="0">Explore<i class="fas fa-chevron-down"></i></div>
             <div class="groupcontent">
