Added image on events page

--- a/events.html
+++ b/events.html
@@ -37,23 +37,36 @@
           Bring us to your event!
         </p>
         <p>
-          To make a reservation, call <a href="tel:+11234567890">123-456-7890</a>.
+          To make a reservation or rental, call <a href="tel:+11234567890">123-456-7890</a>.
         </p>
       </div>
       <div class="splitcontainer">
         <div class="contentcard">
           <h2>Astronomy Tours</h2>
           <p>
-            Have an expert come to your event for a very engaging and interactive experience.
+            Have an expert stargazer come to your event for a stellar experience.
           </p>
         </div>
+      </div>
+      <div class="splitcontainer">
         <div class="contentcard">
           <h2>Telescopes</h2>
           <p>
-            Rent a telescope for a night!
+            Rent a telescope for a night or two!
+          </p>
+          <p>
+            If this is your first time with a telescope, we require you to take a short <i>(10 minute)</i> lesson in order to reduce the chance of something breaking.
+          </p>
+          <p>
+            When renting a telescope, you will be responsible for any damage that occurs to it.
           </p>
         </div>
-        
+        <div class="contentcard image optional">
+          <img src="images/telescope2.jpg" width="350px">
+          <div class="caption">
+            Photo by <a href="https://unsplash.com/@blueguy590?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jonathan Mabey</a> on <a href="https://unsplash.com/s/photos/telescope?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+          </div>
+        </div>
       </div>
     </main>
     <footer>
