--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <h1>Polaris Epsilon</h1>
         <h2>Astronomy Tours</h2>
       </div>
-      <div class="header-content-wrapper">
-        <span class="caption">
+      <div class="header-content-wrapper caption">
+        <span>
           Video by <a href="https://www.pexels.com/@faycol-bogonko-987950" target="_blank">faycol bogonko</a> from <a href="https://www.pexels.com/video/time-lapse-video-of-milky-way-1926295/" target="_blank">Pexels</a>
         </span>
       </div>
